--- a/code transpiler react app/package.json
+++ b/code transpiler react app/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.0.2",
     "axios": "^1.8.4",
     "gh-pages": "^6.3.0",
@@ -32,6 +33,6 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
-  }, 
+  },
   "homepage": "https://sanidhya-dobhal.github.io/Python-to-C-transpiler/"
 }
